fix: contacts filters menu z-index issue

--- a/src/components/contacts/ContactList.scss
+++ b/src/components/contacts/ContactList.scss
@@ -33,10 +33,12 @@
       }
 
       .button {
-        height: 40px;
-        padding-left: 8px !important;
-        padding-right: 12px !important;
-        font-size: 14px !important;
+        &:not(.ResetAccountStatusButton) {
+          height: 40px;
+          padding-left: 8px !important;
+          padding-right: 12px !important;
+          font-size: 14px !important;
+        }
 
         &--noLabel {
           width: 40px;
