--- a/src/components/contacts/ContactsTable/MobileColumnToggle.scss
+++ b/src/components/contacts/ContactsTable/MobileColumnToggle.scss
@@ -1,6 +1,8 @@
 @import "@unioncredit/ui/src/variables";
 
 .MobileColumnToggle {
+  z-index: 998;
+
   .Card__body {
     padding: 12px !important;
   }
